--- a/views/mixins/articleForm.pug
+++ b/views/mixins/articleForm.pug
@@ -11,7 +11,7 @@ mixin articleForm(article, buttonText, saveUrl, cancelUrl, deleteUrl)
             input(type="text" name="image_url" id="image_url" required=true value=article.image_url)
         div.input-container
             label(for="body").form-label
-            textarea(name="body" id="body" rows=20 cols=100 placeholder="Long ago in a galaxy far far away...") #{artcle.body}
+            textarea(name="body" id="body" rows=20 cols=100 placeholder="Long ago in a galaxy far far away...") #{article.body}
         a.button(href=cancelUrl) Cancel
         if(deleteUrl)
             a.button(href=deleteUrl) Delete
