--- a/views/articles/edit.pug
+++ b/views/articles/edit.pug
@@ -3,4 +3,4 @@ extends ../layout
 block content
     include ../mixins/articleForm
     div.content
-        +articleForm(article, 'Update', `/article/${article.id}edit`, `/article/${article.id}`, `/article/${article.id}/delete`)
+        +articleForm(article, 'Update', `/article/${article.id}/edit`, `/article/${article.id}`, `/article/${article.id}/delete`)
